Introduce exometer metrics into 2.0

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -27,6 +27,8 @@
          yokozuna,
          cluster_info,
          riak_control,
+         exometer,
+         afunix,
          erlydtl,
          riak_auth_mods,
          {folsom, load},
@@ -61,6 +63,8 @@
        {app, lager_syslog, [{incl_cond, include}]},
        {app, lager, [{incl_cond, include}]},
        {app, riak_control, [{incl_cond, include}]},
+       {app, exometer, [{incl_cond, include}]},
+       {app, afunix, [{incl_cond, include}]},
        {app, riak_api, [{incl_cond, include}]},
        {app, folsom, [{incl_cond, include}]},
        {app, riak_ensemble, [{incl_cond, include}]}
