Temp redirect for testing issue 1294

--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,7 @@
         {node_package, ".*", {git, "git://github.com/basho/node_package.git", {branch, "2.0"}}},
         {lager_syslog, "2.0.3", {git, "git://github.com/basho/lager_syslog.git", {tag, "2.0.3"}}},
         {cluster_info, ".*", {git, "git://github.com/basho/cluster_info.git", {branch, "2.0"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "2.0"}}},
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "uw-issue-1294"}}},
         {riak_search, ".*", {git, "git://github.com/basho/riak_search.git", {branch, "2.0"}}},
         {riak_control, ".*", {git, "git://github.com/basho/riak_control.git", {branch, "2.0"}}},
         {riaknostic, ".*", {git, "git://github.com/basho/riaknostic.git", {tag, "2.0.0"}}},
