--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 %% -*- mode: erlang;erlang-indent-level: 4;indent-tabs-mode: nil -*-
 {sub_dirs, ["rel", "apps/riak"]}.
 
-{require_otp_vsn, "R14B0[234]|R15|R16"}.
+{require_otp_vsn, "R16"}.
 {cover_enabled, true}.
 
 {lib_dirs, ["apps/riak"]}.
@@ -14,16 +14,16 @@
                ]}.
 
 {deps, [
-        {node_package, ".*", {git, "git://github.com/basho/node_package.git", {branch, "develop"}}},
+        {node_package, ".*", {git, "git://github.com/basho/node_package.git", {branch, "2.0"}}},
         {lager_syslog, "2.0.3", {git, "git://github.com/basho/lager_syslog.git", {tag, "2.0.3"}}},
-        {cluster_info, ".*", {git, "git://github.com/basho/cluster_info.git", {branch, "develop"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}},
-        {riak_search, ".*", {git, "git://github.com/basho/riak_search.git", {branch, "develop"}}},
-        {riak_control, ".*", {git, "git://github.com/basho/riak_control.git", {branch, "develop"}}},
-        {riaknostic, ".*", {git, "git://github.com/basho/riaknostic.git", {branch, "develop"}}},
-        {yokozuna, ".*", {git, "git://github.com/basho/yokozuna.git", {branch, "develop"}}},
+        {cluster_info, ".*", {git, "git://github.com/basho/cluster_info.git", {branch, "2.0"}}},
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "2.0"}}},
+        {riak_search, ".*", {git, "git://github.com/basho/riak_search.git", {branch, "2.0"}}},
+        {riak_control, ".*", {git, "git://github.com/basho/riak_control.git", {branch, "2.0"}}},
+        {riaknostic, ".*", {git, "git://github.com/basho/riaknostic.git", {tag, "2.0.0"}}},
+        {yokozuna, ".*", {git, "git://github.com/basho/yokozuna.git", {branch, "2.0"}}},
         {riak_json_http, ".*", {git, "git://github.com/basho-labs/riak_json_http.git", {tag, "v0.0.4"}}},
-        {riak_auth_mods, ".*", {git, "git://github.com/basho/riak_auth_mods.git", {branch, "develop"}}},
+        {riak_auth_mods, ".*", {git, "git://github.com/basho/riak_auth_mods.git", {branch, "2.0"}}},
         {rebar_lock_deps_plugin, ".*", {git, "git://github.com/seth/rebar_lock_deps_plugin.git", {branch, "master"}}}
        ]}.
 
