--- a/rebar.config
+++ b/rebar.config
@@ -17,6 +17,7 @@
         {rebar_lock_deps_plugin, ".*", {git, "git://github.com/seth/rebar_lock_deps_plugin.git", {branch, "master"}}},
         {node_package, ".*", {git, "git://github.com/basho/node_package.git", {branch, "develop"}}},
         {lager_syslog, "2.0.3", {git, "git://github.com/basho/lager_syslog.git", {tag, "2.0.3"}}},
+        {fluent, ".*", {git, "git://github.com/kuenishi/fluent-logger-erlang", {tag, "0.1.2"}}},
         {cluster_info, ".*", {git, "git://github.com/basho/cluster_info.git", {branch, "develop"}}},
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}},
         {riak_search, ".*", {git, "git://github.com/basho/riak_search.git", {branch, "develop"}}},
