introduce deps/riak_net

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -113,6 +113,7 @@
            {template, "../deps/bitcask/priv/bitcask.schema", "lib/16-bitcask.schema"},
            {template, "../deps/bitcask/priv/bitcask_multi.schema", "lib/17-bitcask_multi.schema"},
            {template, "../deps/riak_control/priv/riak_control.schema", "lib/18-riak_control.schema"},
+           {template, "../deps/riak_net/priv/riak_net.schema", "lib/19-riak_net.schema"},
 
            {template, "../deps/riak_kv/priv/multi_backend.schema", "lib/20-multi_backend.schema"},
            {template, "../deps/eleveldb/priv/eleveldb.schema", "lib/21-leveldb.schema"},
