--- a/rel/vars.config
+++ b/rel/vars.config
@@ -17,6 +17,8 @@
 {handoff_ip,        "127.0.0.1"}.
 {pb_ip,             "127.0.0.1"}.
 {pb_port,           8087}.
+{rla_ip,            "0.0.0.0"}.
+{rla_port,          8085}.
 {storage_backend,   "bitcask"}.
 {sasl_error_log,    "{{platform_log_dir}}/sasl-error.log"}.
 {sasl_log_dir,      "{{platform_log_dir}}/sasl"}.
