--- a/rebar.config
+++ b/rebar.config
@@ -19,6 +19,7 @@
         {lager_syslog, "2.0.3", {git, "git://github.com/basho/lager_syslog.git", {tag, "2.0.3"}}},
         {cluster_info, ".*", {git, "git://github.com/basho/cluster_info.git", {branch, "develop"}}},
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}},
+        {riak_net, ".*", {git, "git://github.com/basho/riak_net.git", {branch, "feature/az/resource-location-authority"}}},
         {riak_search, ".*", {git, "git://github.com/basho/riak_search.git", {branch, "develop"}}},
         {riak_control, ".*", {git, "git://github.com/basho/riak_control.git", {branch, "develop"}}},
         {riaknostic, ".*", {git, "git://github.com/basho/riaknostic.git", {branch, "develop"}}},
