CHanged to use perf/jrd_opts_mvm_keygen branch of riak_kv

--- a/rebar.config
+++ b/rebar.config
@@ -20,7 +20,7 @@
         {riaknostic, ".*", {git, "git://github.com/basho/riaknostic.git", {branch, "end-to-end/timeseries"}}},
         {cluster_info, ".*", {git, "git://github.com/basho/cluster_info.git", {tag, "2.0.3"}}},
         {lager_syslog, ".*", {git, "git@github.com:basho/lager_syslog.git", {branch, "end-to-end/timeseries"}}},
-        {riak_kv, ".*", {git, "git@github.com:basho/riak_kv.git", {branch, "feature/ttb_encoding"}}},
+        {riak_kv, ".*", {git, "git@github.com:basho/riak_kv.git", {branch, "perf/jrd_opts_mvm_keygen"}}},
         {riak_api, ".*", {git, "git@github.com:basho/riak_api.git", {branch, "feature/ttb_encoding"}}},
         {riak_control, ".*", {git, "git@github.com:basho/riak_control.git", {branch, "end-to-end/timeseries"}}},
         {riak_search, ".*", {git, "git@github.com:basho/riak_search.git", {branch, "end-to-end/timeseries"}}},
