Changed rebar to use perf/ttb_encoding_v2 branches

--- a/rebar.config
+++ b/rebar.config
@@ -20,14 +20,15 @@
         {riaknostic, ".*", {git, "git://github.com/basho/riaknostic.git", {branch, "end-to-end/timeseries"}}},
         {cluster_info, ".*", {git, "git://github.com/basho/cluster_info.git", {tag, "2.0.3"}}},
         {lager_syslog, ".*", {git, "git@github.com:basho/lager_syslog.git", {branch, "end-to-end/timeseries"}}},
-        {riak_kv, ".*", {git, "git@github.com:basho/riak_kv.git", {branch, "perf/jrd_opts_mvm_keygen"}}},
+        {riak_kv, ".*", {git, "git@github.com:basho/riak_kv.git", {branch, "perf/ttb_encoding_v2"}}},
         {riak_api, ".*", {git, "git@github.com:basho/riak_api.git", {branch, "feature/ttb_encoding"}}},
         {riak_control, ".*", {git, "git@github.com:basho/riak_control.git", {branch, "end-to-end/timeseries"}}},
         {riak_search, ".*", {git, "git@github.com:basho/riak_search.git", {branch, "end-to-end/timeseries"}}},
         {yokozuna, ".*", {git, "git://github.com/basho/yokozuna.git", {branch, "2.1"}}},
 
         {riak_auth_mods, ".*", {git, "git@github.com:basho/riak_auth_mods.git", {branch, "develop"}}},
-        {meck, "0.8.2", {git, "git@github.com:basho/meck.git", {tag, "0.8.2"}}}
+        {meck, "0.8.2", {git, "git@github.com:basho/meck.git", {tag, "0.8.2"}}},
+        {eleveldb, ".*", {git, "git@github.com:basho/eleveldb.git", {branch, "perf/ttb_encoding_v2"}}}
        ]}.
 
 {plugins, [rebar_lock_deps_plugin]}.
