--- a/rebar.config
+++ b/rebar.config
@@ -16,9 +16,9 @@
         {node_package, ".*", {git, "git://github.com/basho/node_package.git", {tag, "2.0.4"}}},
         {lager_syslog, ".*", {git, "git://github.com/basho/lager_syslog.git", {branch, "2.1"}}},
         {cluster_info, ".*", {git, "git://github.com/basho/cluster_info.git", {tag, "2.0.3"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop-2.2"}}},
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "CDJ-2.2-pex-wip"}}},
         {riak_search, ".*", {git, "git://github.com/basho/riak_search.git", {branch, "develop-2.2"}}},
-        {riak_control, ".*", {git, "git://github.com/basho/riak_control.git", {branch, "develop-2.2"}}},
+        {riak_control, ".*", {git, "git://github.com/basho/riak_control.git", {branch, "CDJ-2.2-pex-wip"}}},
         {riaknostic, ".*", {git, "git://github.com/basho/riaknostic.git", {branch, "2.1"}}},
         {yokozuna, ".*", {git, "git://github.com/basho/yokozuna.git", {branch, "develop-2.2"}}},
         {riak_auth_mods, ".*", {git, "git://github.com/basho/riak_auth_mods.git", {branch, "2.1"}}},
