--- a/rebar.config
+++ b/rebar.config
@@ -13,16 +13,16 @@
                 {compiler_options, [report, return, debug_info]}
                ]}.
 {deps, [
-        {node_package, ".*", {git, "git://github.com/basho/node_package.git", {tag, "3.0.0"}}},
-        {lager_syslog, ".*", {git, "git://github.com/basho/lager_syslog.git", {branch, "2.1"}}},
-        {cluster_info, ".*", {git, "git://github.com/basho/cluster_info.git", {tag, "2.0.3"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "2.1"}}},
-        {riak_search, ".*", {git, "git://github.com/basho/riak_search.git", {branch, "2.1"}}},
-        {riak_control, ".*", {git, "git://github.com/basho/riak_control.git", {branch, "2.1"}}},
-        {riaknostic, ".*", {git, "git://github.com/basho/riaknostic.git", {branch, "2.1"}}},
-        {yokozuna, ".*", {git, "git://github.com/basho/yokozuna.git", {branch, "2.1"}}},
-        {riak_auth_mods, ".*", {git, "git://github.com/basho/riak_auth_mods.git", {branch, "2.1"}}},
-        {rebar_lock_deps_plugin, ".*", {git, "git://github.com/seth/rebar_lock_deps_plugin.git",
+        {node_package, ".*", {git, "https://github.com/basho/node_package.git", {tag, "3.0.0"}}},
+        {lager_syslog, ".*", {git, "https://github.com/basho/lager_syslog.git", {branch, "2.1"}}},
+        {cluster_info, ".*", {git, "https://github.com/basho/cluster_info.git", {tag, "2.0.3"}}},
+        {riak_kv, ".*", {git, "https://github.com/basho/riak_kv.git", {branch, "features/lrb/use-gpb"}}},
+        {riak_search, ".*", {git, "https://github.com/basho/riak_search.git", {branch, "2.1"}}},
+        {riak_control, ".*", {git, "https://github.com/basho/riak_control.git", {branch, "2.1"}}},
+        {riaknostic, ".*", {git, "https://github.com/basho/riaknostic.git", {branch, "2.1"}}},
+        {yokozuna, ".*", {git, "https://github.com/basho/yokozuna.git", {branch, "2.1"}}},
+        {riak_auth_mods, ".*", {git, "https://github.com/basho/riak_auth_mods.git", {branch, "2.1"}}},
+        {rebar_lock_deps_plugin, ".*", {git, "https://github.com/seth/rebar_lock_deps_plugin.git",
             "7a5835029c42b8138325405237ea7e8516a84800"}}
        ]}.
 
