Use gpb yokozuna branch

--- a/rebar.config
+++ b/rebar.config
@@ -20,7 +20,7 @@
         {riak_search, ".*", {git, "https://github.com/basho/riak_search.git", {branch, "2.1"}}},
         {riak_control, ".*", {git, "https://github.com/basho/riak_control.git", {branch, "2.1"}}},
         {riaknostic, ".*", {git, "https://github.com/basho/riaknostic.git", {branch, "2.1"}}},
-        {yokozuna, ".*", {git, "https://github.com/basho/yokozuna.git", {branch, "2.1"}}},
+        {yokozuna, ".*", {git, "https://github.com/basho/yokozuna.git", {branch, "features/lrb/use-gpb"}}},
         {riak_auth_mods, ".*", {git, "https://github.com/basho/riak_auth_mods.git", {branch, "2.1"}}},
         {rebar_lock_deps_plugin, ".*", {git, "https://github.com/seth/rebar_lock_deps_plugin.git",
             "7a5835029c42b8138325405237ea7e8516a84800"}}
